FIX: css scrolls on smaller screens now

--- a/frontend/src/components/Footer/index.css
+++ b/frontend/src/components/Footer/index.css
@@ -5,12 +5,6 @@ footer {
     justify-content: space-between;
     align-items: center;
 
-    position: absolute;
-    left: 0;
-    bottom: 0;
-    width: 100%;
-
-
     background-color: #000000;
 }
 
